# DiffusionDnC

./: LICENSE  README.md  pyproject.toml  run.sh
experiments/mixture_of_gaussians/: mog_comparison.py  mog_diffusion.py  mog_gp.py  mog_semikde.R  mog_setup.py
experiments/mixture_of_gaussians/data/: samples_diff.npy  samples_diff_t0.12.npy  samples_diff_t0.2.npy  samples_diff_t1.npy  samples_exact.npy  samples_gp.npy  samples_semikde.npy  shard_gradlogpost_evals.npy  shard_logpost_evals.npy  shard_samples.npy  shard_samples_swiss.npy  time_semikde.npy  time_semikde_r.npy  times_diff.npy  times_gp.npy
experiments/powerplant/: powerplant_comparison.py  powerplant_diffusion.py  powerplant_gp.py  powerplant_semikde.R  powerplant_setup.py
experiments/spambase/: spambase_comparison.py  spambase_diffusion.py  spambase_gp.py  spambase_semikde.R  spambase_setup.py
experiments/toy_logistic_regression/: toylogreg_comparison.py  toylogreg_diffusion.py  toylogreg_gp.py  toylogreg_semikde.R  toylogreg_setup.py
experiments/toy_logistic_regression/data/: 15shards_gradlogpost_evals.npy  15shards_logpost_evals.npy  15shards_samples.npy  15shards_samples_swiss.npy  samples_diff_15shards.npy  samples_exact.npy  samples_gp_15shards.npy  samples_semikde_15shards.npy  time_semikde_15shards.npy  (+2 more)
experiments/toy_logistic_regression_bigger/: bigtoylogreg_comparison.py  bigtoylogreg_diffusion.py  bigtoylogreg_gp.py  bigtoylogreg_semikde.R  bigtoylogreg_setup.py
src/dnc/: __init__.py  diffusion_merge.py  gp_merge.py  mcmc.py  metrics.py  plotting.py  transform_merges.py
